Unbreak mDNS on older kernels

setsockopt was failing on some older kernels where the desired
option is not available.  Check errno for the unsupported error instead
of the return value which is always -1 if there is an error.

Bug: 917534

Change-Id: Ie62cccdeab9ae2017ab1b5bf121825f97c1ccb2c
Reviewed-on: https://chromium-review.googlesource.com/c/1403090
Commit-Queue: Sean Kau <skau@chromium.org>
Reviewed-by: Eric Orth <ericorth@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#621804}(cherry picked from commit 125d5425d6d8d032725aca188dd502d6731e528c [formerly 2e49c94c24c1d93fe54b9549c9605b45e41cb8d7])
Reviewed-on: https://chromium-review.googlesource.com/c/1409726
Reviewed-by: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#676}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 2e5ac42bd4339a8988cb1efa6b25eeaebbfec0d6